--- a/SignMeUp/Web.config
+++ b/SignMeUp/Web.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="mymsdatabaseConnectionString" connectionString="Data Source=mssql6.gear.host;Initial Catalog=mymsdatabase;Persist Security Info=True;User ID=mymsdatabase;Password=starwars!" providerName="System.Data.SqlClient" />
-    <add name="SignMeUpLocalConnectionString" connectionString="Data Source=DESKTOP-DARBDT6\SQLEXPRESS;Initial Catalog=SignMeUpLocal;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SignMeUpConnectionString" connectionString="Data Source=AJG-LAPTOP\SQLEXPRESS;Initial Catalog=SignMeUpLocal;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
+    <add name="SignMeUpLocalConnectionString" connectionString="Data Source=AJG-LAPTOP\SQLEXPRESS;Initial Catalog=SignMeUpLocal;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
